--- a/views/basic/findPass.hbs
+++ b/views/basic/findPass.hbs
@@ -5,47 +5,26 @@
     <h1>{{title}}</h1>
     <hr>
 
-    <form onsubmit="return check()" action="/register/post" method="post">
+    <form onsubmit="return check()" action="/login/findPass" method="post">
         <div id="message">
             {{#if msg}}
                 <div class="alert alert-danger">{{msg}}</div>
             {{/if}}
         </div>
-        <label for="id_email">用户名:</label>
-        <div id="id_username">
-            <input id="username" maxlength="18" class="form-control border" name="username" value="{{form.username}}"
-                   placeholder="用户名"
-                   type="text" data-required="" data-conditional="username" data-description="username"
-                   data-describedby="message">
-        </div>
-        <label for="id_nickname">昵称:</label>
-        <div id="id_nickname">
-            <input id="nickname" maxlength="9" class="form-control border" name="nickname" value="{{form.nickname}}"
-                   placeholder="昵称" type="text"
-                   data-required="">
-        </div>
-        <label for="id_name">邮箱:</label>
+        <label for="id_name">注册邮箱:</label>
         <div id="id_email">
             <input id="email" maxlength="64" class="form-control border" name="email" value="{{form.email}}"
-                   placeholder="邮箱地址"
+                   placeholder="注册邮箱"
                    type="text" data-required="" data-conditional="email" data-description="email"
                    data-describedby="message">
         </div>
-        <label for="id_password">密码:</label>
+        <label for="id_password">验证码:</label>
         <div id="id_password">
             <input id="password" class="form-control border" maxlength="18" name="password"
-                   placeholder="密码"
+                   placeholder="验证码"
                    type="password" data-required="">
         </div>
-        <label for="id_password2">确认密码:</label>
-        <div id="id_password2">
-            <input id="password2" maxlength="18" class="form-control border" name="password2"
-                   placeholder="请再输入一次密码"
-                   type="password" data-required="" data-conditional="confirm" data-describedby="message"
-                   data-description="confirm">
-        </div>
-        <input id="valid" name="valid" hidden="hidden">
-        <input type="submit" class="btn btn-success border" value="注 册">
+        <input type="submit" class="btn btn-success border" value="找回密码">
     </form>
 </div>
 
@@ -63,32 +42,20 @@
                     $(this).closest('div').removeClass('has-success').addClass('has-error');
                 },
                 conditional: {
-                    confirm: function () {
-                        return $(this).val() == $('#password').val();
-                    },
                     email: function () {
                         return /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test($(this).val());
-                    },
-                    username: function () {
-                        return /^[a-z][a-z_0-9]{4,18}$/i.test($(this).val());
                     }
                 },
                 description: {
-                    confirm: {
-                        conditional: '<div class="alert alert-danger">两次输入的密码不一致</div>'
-                    },
                     email: {
                         conditional: '<div class="alert alert-danger">邮箱格式不合法</div>'
-                    },
-                    username: {
-                        conditional: '<div class="alert alert-danger">字母/字母+数字组合,5-18位</div>'
                     }
                 }
             });
         })
         function check() {
             var result = false;
-            $.ajax("/register/valid", {
+            $.ajax("/login/findPass/valid", {
                 type: "post",
                 async: false,      //ajax同步
                 data: {
