--- a/views/basic/login.hbs
+++ b/views/basic/login.hbs
@@ -19,7 +19,7 @@
         </div>
         <label for="id_password">密码:</label>
         <div id="id_password">
-            <input id="password" name="password" class="form-control border" placeholder="密码" type="password" data-required>
+            <input id="password" name="password" class="form-control border" placeholder="密码" type="password" data-required="">
         </div>
         <div class="checkbox">
             <label>
