--- a/views/partials/includes.hbs
+++ b/views/partials/includes.hbs
@@ -1,6 +1,4 @@
-<script src="/vendors/pace/pace.min.js"></script>
-<link href="vendors/pace/themes/pace-theme-bounce.css" rel="stylesheet" />
-
+<link rel="stylesheet" href="vendors/pace/themes/pace-theme-bounce.css"/>
 <link rel='stylesheet' media='all' href='/vendors/font-awesome/css/font-awesome.min.css'/>
 <link rel="stylesheet" media='all' href="/vendors/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" media='all' href="/vendors/animate/animate.min.css">
@@ -8,15 +6,15 @@
 <link rel='stylesheet' media='all' href='/css/layout.css'/>
 <link rel='stylesheet' media='all' href='/css/plugins.css'/>
 <link rel='stylesheet' media='all' href='/css/addons.css'/>
-
-
 <link rel='stylesheet' media='all' href="/vendors/baguette/baguetteBox.min.css"/>
+<link rel='stylesheet' media='all' href="/vendors/layer/skin/layer.css"/>
 
+<script type="text/javascript" src="/vendors/pace/pace.min.js"></script>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="/js/utils.js"></script>
-
 <script type="text/javascript" src="/vendors/layer/layer.js"></script>
-
+<script type="text/javascript" src="/vendors/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/sea.js"></script>
 <script type="text/javascript" src="/js/sea.config.js"></script>
+<script type="text/javascript" src="/vendors/validate/jquery-validate.js"></script>
