--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,6 +391,7 @@ label {font-weight: normal;}
 修改头像
 */
 .update_ava { width: 300px; min-height: 300px; margin: 10px auto; text-align: center; background-color: #f5f5f5; border: 1px solid transparent; border-radius: 4px; border-color: #ddd; }
+.update_ava1 { position: relative; cursor: move; width: 300px; min-height: 300px; margin: 10px auto; text-align: center; background-color: #f5f5f5; border: 1px solid transparent; border-radius: 4px; border-color: #ddd; }
 
 .account-tab>li>a {border-radius: 2px; padding: 6px 10px;}
 
@@ -614,4 +615,9 @@ label {font-weight: normal;}
 	max-height: 40px;
 	min-height: 40px;
 	overflow: hidden;
+}
+.dragAble
+{
+	position: absolute;
+	cursor: move;
 }
