--- a/views/basic/changePass.hbs
+++ b/views/basic/changePass.hbs
@@ -1,34 +1,47 @@
-<div class="login">
-    <a href="/">
-        <img src="/images/logo/m90.png" height="72" width="72">
-    </a>
-    <h1>{{title}}</h1>
-    <hr>
-
-    <form  action="/user/changePass/post" method="post">
+<script src="/js/handlebars.min.js"></script>
+<div class="panel panel-default stacked">
+    <div class="panel-heading">
+        <ul class="nav nav-pills account-tab">
+            <li><a href="/user/basicInfo">基本信息</a></li>
+            <li><a href="/user/headPortrait">修改头像</a></li>
+            <li class="active"><a href="/user/changePass">修改密码</a></li>
+        </ul>
+    </div>
+    <div class="panel-body">
         <div id="message">
             {{#if msg}}
                 <div class="alert alert-danger">{{msg}}</div>
             {{/if}}
         </div>
-        <label for="id_password">新密码:</label>
-        <div id="id_password">
-            <input id="password" class="form-control border" maxlength="18" name="password"
-                   placeholder="新密码"
-                   type="password" data-required="">
+        <div class="tab-pane active" id="profile">
+            <form action="/user/changePass/post" method="post">
+                <label for="id_password">旧密码:</label>
+                <div id="id_password">
+                    <input id="oldPassword" class="form-control border" maxlength="18" name="oldPassword"
+                           placeholder="旧密码"
+                           type="password" data-required="" data-conditional="oldPassword" data-description="oldPassword"
+                           data-describedby="message">
+                </div>
+                <label for="id_password">新密码:</label>
+                <div id="id_password">
+                    <input id="password" class="form-control border" maxlength="18" name="password"
+                           placeholder="新密码"
+                           type="password" data-required="" data-conditional="newPassword" data-description="newPassword"
+                           data-describedby="message">
+                </div>
+                <label for="id_password2">确认密码:</label>
+                <div id="id_password2">
+                    <input id="password2" maxlength="18" class="form-control border" name="password2"
+                           placeholder="请再输入一次密码"
+                           type="password" data-required="" data-conditional="confirm" data-describedby="message"
+                           data-description="confirm">
+                </div>
+                <input type="hidden" name="_id" value="{{_id}}"/>
+                <input type="submit" class="btn btn-success border" value="修改密码">
+            </form>
         </div>
-        <label for="id_password2">确认密码:</label>
-        <div id="id_password2">
-            <input id="password2" maxlength="18" class="form-control border" name="password2"
-                   placeholder="请再输入一次密码"
-                   type="password" data-required="" data-conditional="confirm" data-describedby="message"
-                   data-description="confirm">
-        </div>
-        <input type="hidden" name="email" value="{{email}}"/>
-        <input type="submit" class="btn btn-success border" value="修改密码">
-    </form>
-</div>
-
+    </div><!-- /panel-content -->
+</div><!-- /panel -->
 
 {{#section 'jquery'}}
     <script type="text/javascript">
@@ -43,35 +56,46 @@
                     $(this).closest('div').removeClass('has-success').addClass('has-error');
                 },
                 conditional: {
+                    oldPassword: function () {
+                        return $(this).val().length > 0;
+                    },
+                    newPassword: function () {
+                        return $(this).val() != $("#oldPassword").val();
+                    },
                     confirm: function () {
                         return $(this).val() == $('#password').val();
                     },
                 },
                 description: {
+                    oldPassword: {
+                        conditional: '<div class="alert alert-danger">旧密码不能为空</div>'
+                    },
+                    newPassword: {
+                        conditional: '<div class="alert alert-danger">新旧密码不能相同</div>'
+                    },
                     confirm: {
                         conditional: '<div class="alert alert-danger">两次输入的密码不一致</div>'
                     }
                 }
             });
-        })
-
-        var msgChecked = false;
-        function clearMsg() {
-            var msgDiv = $('#message');
-            msgDiv.removeClass('has-error').addClass('has-success');
-            msgDiv.html('');
-            msgChecked = false;
-        }
-
-        function checkMsg() {
-            var msgDiv = $('#message');
-            if ((!msgChecked) && msgDiv.html() != "") {
-                setTimeout(clearMsg, 5000);
-                msgChecked = true;
+            var msgChecked = false;
+            function clearMsg() {
+                var msgDiv = $('#message');
+                msgDiv.removeClass('has-error').addClass('has-success');
+                msgDiv.html('');
+                msgChecked = false;
             }
-        }
-        setInterval(checkMsg, 1000);
+
+            function checkMsg() {
+                var msgDiv = $('#message');
+                if ((!msgChecked) && msgDiv.html() != "") {
+                    setTimeout(clearMsg, 5000);
+                    msgChecked = true;
+                }
+            }
+            setInterval(checkMsg, 1000);
+        });
+
+
     </script>
 {{/section}}
-
-
