--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -55,7 +55,7 @@
                                 </li>
                                 <li class="divider"></li>
 
-                                <li><a href="/admin">后台管理</a></li>
+                                <li><a href="#">后台管理</a></li>
 
                                 <li><a href="/logout">退出</a></li>
                             </ul>
@@ -72,13 +72,4 @@
         </div>
     </nav>
 </div>
-<script type="text/javascript">
-    $(function () {
-        $('.navbar-inverse  a[nav]').each(function () {
-            $this = $(this);
-            if ($this[0].href == String(window.location)) {
-                $this.closest('li').addClass("active");
-            }
-        });
-    });
-</script>
+
