调整修改头像样式

--- a/views/basic/headPortrait.hbs
+++ b/views/basic/headPortrait.hbs
@@ -23,7 +23,7 @@
                     <input id="upload_btn" type="file" name="file" accept="image/*" title="点击添加图片">
                 </label>
             </div>
-            <div id="picDiv" class="update_ava">
+            <div id="picDiv" class="update_ava1">
                 <img id="pic"  class="dragAble" alt="头像" src="/images/ava/default.png" />
             </div>
 
